name:                reflex-sumtype-render
version:             0.1.0.0
author:              Anders Papitto
maintainer:          anderspapitto@gmail.com
copyright:           2016 Anders Papitto
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src, shared
  exposed-modules:     ReflexHelpers
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , dependent-sum
                     , generics-sop
                     , lens
                     , mtl
                     , reflex
                     , reflex-dom
                     , text
  default-extensions:  DeriveGeneric
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RecursiveDo
                     , ScopedTypeVariables
                     , StrictData
                     , TemplateHaskell
